# docscopilot

./: .containerignore  .gitignore  .pre-commit-config.yaml  Containerfile  Makefile  README.md  podman-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
config/: docscopilot.toml.example  docscopilot.yaml.example
container/: config.env.example  entrypoint.sh  healthcheck.sh
docs/: CONFIGURATION.md  CONTAINER.md  IMPLEMENTATION_PLAN.md  INTEGRATION_TESTS.md  LINTING.md  PERFORMANCE.md  SECURITY.md  VALIDATION_LIBRARIES_OPTIONS.md  docscopilot_architecture.md  docscopilot_spec.md
src/code_context_server/: __init__.py  changed_endpoints.py  code_examples.py  feature_metadata.py  models.py  server.py
src/docs_repo_server/: __init__.py  models.py  repo_manager.py  server.py
src/shared/: __init__.py  code_parser.py  config.py  errors.py  git_utils.py  logging.py  performance.py  retry.py  security.py  validation.py
src/templates_style_server/: __init__.py  models.py  server.py  template_loader.py
src/templates_style_server/defaults/glossaries/: default.yaml
src/templates_style_server/defaults/style_guides/: default.yaml
src/templates_style_server/defaults/templates/: api_reference.md.j2  concept.md.j2  configuration_reference.md.j2  feature_overview.md.j2  release_notes.md.j2  task.md.j2
tests/: __init__.py
tests/integration/: conftest.py  test_code_context_server_integration.py  test_docs_repo_server_integration.py  test_templates_style_server_integration.py
tests/unit/: test_changed_endpoints.py  test_code_context_server.py  test_code_examples.py  test_code_parser.py  test_config.py  test_docs_repo_server.py  test_error_handling.py  test_feature_metadata.py  test_git_utils.py  test_repo_manager.py  test_security.py  test_template_loader.py  test_templates_style_server.py
